# robina_faceRecognition

./: CMakeLists.txt  CMakeLists.txt.user.7b3f6d1  README.md  faceRecognition.launch  package.xml
action/: ac_faceRecogn.action  ac_faceRecognitionContiniously.action
include/robina_faceRecognition/: LuxandFaceSDK.h  pantilt.hpp  robina_faceRecognition.hpp
msg/: Angles_msg.msg  Face_Angles.msg  faceRecognition_msg.msg
src/: pantilt.cpp  robina_faceRecognition.cpp
srv/: facesAngles.srv  imageResponse.srv  loadTemplateface.srv  recognizeFaceOnce.srv  waitToDetectFace.srv
